# cuew_hipew

./: CMakeLists.txt  README.md  vcsetup-2022.bat
auto/: cuew.template.c  cuew.template.h  cuew_gen.py  note-cuda-12.1.txt
cuewTest/: cuewTest.c  ptxCompilerTest.c  ptxCompilerTest.cc
include/: cuew.h  cuew_ptx_compiler.h
include/cuda_local/: library_types.h
sandbox/cudacc/: compile.sh  test.cu
sandbox/cudart/: Makefile  README.md  TODO.md  cublas-config.json  cudart-allowlist.json  cudart-config.json  cudart-epilogue.inc  cudart.c  cudart.h  cudart_lib.c  cuew_cublas.c  cuew_cublas.h  cuew_cudart.c  cuew_cudart.h  cuew_cufft.c  cuew_cufft.h  cuew_curand.c  cuew_curand.h  cuew_cusolver.c  cuew_cusolver.h  cuew_cusparse.c  cuew_cusparse.h  cuew_nvjpeg.c  cuew_nvjpeg.h  cufft-config.json  cufft-epilogue.inc  cufft_astgen.c  cufft_lib.c  curand-config.json  cusolver-config.json  cusolver-prologue.inc  cusolver_astgen.c  cusparse-config.json  cusparse-prologue.inc  cusparse_astgen.c  gen.py  generate_json.sh  generate_stub.sh  nvjpeg-config.json  nvjpeg-epilogue.inc  (+11 more)
sandbox/cudart/cublas/: Makefile  cuew.c  cuew.h  main.c
sandbox/cudart/cuda_local/: README.md  curand.h  driver_types.h  library_types.h  texture_types.h
sandbox/hip/: CMakeLists.txt  Makefile  hipew.c  hipew.h  test.cc
sandbox/hip/test/: Makefile  test.cc
src/: cuew.c
